[metadata]
name = jenn
version = 0.1.0
author = Steven H. Berguin
author_email = stevenberguin@gmail.com
description = Jacobian-Enhanced Neural Network (JENN)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shb84/GENN.git
project_urls =
    Bug Tracker = https://github.com/shb84/GENN.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src